--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -2,134 +2,169 @@
 
 {% block title %}Home{% endblock %}
 
-{#{% block styles %}#}
-{#  <style type="text/css">#}
-{#  </style>#}
-{#{% endblock %}#}
+{% block styles %}
+    <style type="text/css">
+    </style>
+{% endblock %}
 
-{#{% block page_title %}Bethel University Tinker{% endblock %}#}
+{% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-<div class="row">
-  <div class="large-12 columns">
+    <br/>
+    <br/>
+    <div class="row">
+        <div class="large-12 columns">
 
-    <p>All events will be reviewed and approved within 2-3 business days by Conference and Event Services. You'll receive an email to let you know when your event has been approved.</p>
+            <p>All events will be reviewed and approved within 2-3 business days by Conference and Event Services.
+                You'll receive an email to let you know when your event has been approved.</p>
 
-    <p>If you have any questions, please contact Conference and Event Services at 651.638.6090.</p>
+            <p>If you have any questions, please contact Conference and Event Services at 651.638.6090.</p>
 
 
-  </div>
- </div>
-{#<hr/>#}
-{#<div class="main-panel">#}
-{##}
-{#  <div class="content">#}
-{#    {% if forms %}#}
-{#      <h3>Your Events</h3>#}
-{#      <hr />#}
-{#      {% endif %}#}
-{##}
-{#    <a href="add#page-title" class="small button success">Create New Event</a>#}
-{#   {% for form in forms%}#}
-{#      <div class="row">#}
-{#        <div class="large-6 columns">#}
-{#          <p>#}
-{#            {% if form.is_published %}#}
-{#              <a href={{ form.path }}>{{ form.title }}</a>#}
-{#            {% else %}#}
-{#              {{ form.title }}#}
-{#            {% endif %}#}
-{#            <br/>#}
-{#            {% if form.is_published%}#}
-{#                <small>#}
-{#                    <p>{{ form.dates | safe}}</p>#}
-{#                    <a href={{ form.path }}>{{ form.path }}</a>#}
-{#                </small>#}
-{#            {% endif %}#}
-{#          </p>#}
-{#        </div>#}
-{#        <div class="large-6 columns small-3">#}
-{#          <ul class="button-group">#}
-{#            {% if form.is_published %}#}
-{#              <li><a href="{{ form.path }}" class="small button success">View</a></li>#}
-{#              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>#}
-{#              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>#}
-{#            {% else %}#}
-{#              <li><a class="small button success">Not Approved</a></li>#}
-{#            {% endif %}#}
-{##}
-{#            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>#}
-{#           </ul>#}
-{#        </div>#}
-{#        <hr/>#}
-{#      </div>#}
-{#    {% endfor %}#}
-{##}
-{##}
-{#    <!-- Event Approver forms -->#}
-{#    {% if event_approver_forms %}#}
-{#        <br />#}
-{#        <hr />#}
-{#        <h3>Event Approver</h3>#}
-{#        <hr />#}
-{#    {% endif %}#}
-{#    {% for form in event_approver_forms %}#}
-{#        <div class="row">#}
-{#        <div class="large-6 columns">#}
-{#          <p>#}
-{#            {% if form.is_published %}#}
-{#              <a href={{ form.path }}>{{ form.title }}</a>#}
-{#            {% else %}#}
-{#              {{ form.title }}#}
-{#            {% endif %}#}
-{#            <br/>#}
-{#            {% if form.is_published%}#}
-{#                <small>#}
-{#                    <p>{{ form.dates | safe}}</p>#}
-{#                    <a href={{ form.path }}>{{ form.path }}</a>#}
-{#                </small>#}
-{#            {% endif %}#}
-{#          </p>#}
-{#        </div>#}
-{#        <div class="large-6 columns small-3">#}
-{#          <ul class="button-group">#}
-{#            {% if form.is_published %}#}
-{#              <li><a href="{{ form.path }}" class="small button success">View</a></li>#}
-{#              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>#}
-{#              <li><a href="/event/duplicate/{{ form.id }}#page-title" class="small button">Duplicate</a></li>#}
-{#            {% else %}#}
-{#              <li><a class="small button success">Not Approved</a></li>#}
-{#            {% endif %}#}
-{#            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>#}
-{#           </ul>#}
-{#        </div>#}
-{#        <hr/>#}
-{#      </div>#}
-{#    {%  endfor %}#}
-{##}
-{#  </div>#}
-{#</div>#}
-{##}
-{##}
-{#Delete confirm modal#}
-{#<div id="confirmModal" class="reveal-modal" data-reveal>#}
-{#  <h2>Are you sure you want to delete?</h2>#}
-{#  <p class="lead">Your event page will be unpublished and removed from the calendar.</p>#}
-{#  <a class="modal-confirm" id="modal-confirm" href="/delete/formid">Delete</a>#}
-{#  <a class="close-reveal-modal">&#215;</a>#}
-{#</div>#}
-{##}
+        </div>
+    </div>
+    <hr/>
+    <div>
+
+        <div class="content">
+            {% if forms %}
+                <h3>Your Events</h3>
+                <hr/>
+            {% endif %}
+
+            <!-- Button trigger modal -->
+            <a href="add#page-title" class="btn btn-primary btn-raised" data-toggle="modal" data-target="#myModal">
+                Create New Event
+            </a>
+
+            {% for form in forms %}
+                <div class="row">
+                    <div class="large-6 columns">
+                        <p>
+                            {% if form.is_published %}
+                                <a href={{ form.path }}>{{ form.title }}</a>
+                            {% else %}
+                                {{ form.title }}
+                            {% endif %}
+                            <br/>
+                            {% if form.is_published %}
+                                <small>
+                                <p>{{ form.dates | safe }}</p>
+                                <a href={{ form.path }}>{{ form.path }}</a>
+                                </small>
+                            {% endif %}
+                        </p>
+                    </div>
+                    <div class="large-6 columns small-3">
+                        <ul class="button-group">
+                            {% if form.is_published %}
+                                <li><a href="{{ form.path }}" class="small button success">View</a></li>
+                                <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
+                                <li><a href="/event/duplicate/{{ form.id }}#page-title"
+                                       class="small button">Duplicate</a></li>
+                            {% else %}
+                                <li><a class="small button success">Not Approved</a></li>
+                            {% endif %}
+
+                            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"
+                                   data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
+                        </ul>
+                    </div>
+                    <hr/>
+                </div>
+            {% endfor %}
+
+
+            <!-- Event Approver forms -->
+            {% if event_approver_forms %}
+                <br/>
+                <hr/>
+                <h3>Event Approver</h3>
+                <hr/>
+            {% endif %}
+            {% for form in event_approver_forms %}
+                <div class="row">
+                    <div class="large-6 columns">
+                        <p>
+                            {% if form.is_published %}
+                                <a href={{ form.path }}>{{ form.title }}</a>
+                            {% else %}
+                                {{ form.title }}
+                            {% endif %}
+                            <br/>
+                            {% if form.is_published %}
+                                <small>
+                                <p>{{ form.dates | safe }}</p>
+                                <a href={{ form.path }}>{{ form.path }}</a>
+                                </small>
+                            {% endif %}
+                        </p>
+                    </div>
+                    <div class="large-6 columns small-3">
+                        <ul class="button-group">
+                            {% if form.is_published %}
+                                <li><a href="{{ form.path }}" class="small button success">View</a></li>
+                                <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
+                                <li><a href="/event/duplicate/{{ form.id }}#page-title"
+                                       class="small button">Duplicate</a></li>
+                            {% else %}
+                                <li><a class="small button success">Not Approved</a></li>
+                            {% endif %}
+                            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"
+                                   data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
+                        </ul>
+                    </div>
+                    <hr/>
+                </div>
+            {% endfor %}
+
+        </div>
+    </div>
+
+
+    <!-- Modal Core -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                    language ocean. A small river named Duden flows by their place and supplies it with the necessary
+                    regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                    Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
+                    life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
+                    far World of Grammar.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-info ">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {#    <div id="confirmModal" class="reveal-modal" data-reveal>#}
+    {#        <h2>Are you sure you want to delete?</h2>#}
+    {#        <p class="lead">Your event page will be unpublished and removed from the calendar.</p>#}
+    {#        <a class="modal-confirm" id="modal-confirm" href="/delete/formid">Delete</a>#}
+    {#        <a class="close-reveal-modal">&#215;</a>#}
+    {#    </div>#}
+
 {% endblock %}
-{##}
-{#{% block scripts %}#}
-{##}
-{#  Script to update the modal submit to delete the correct form#}
-{#  <script type="text/javascript">#}
-{#    $(".delete-press").click(function(){#}
-{#      $("#modal-confirm").attr("href", "/event/delete/" + $(this).data('event-id'));#}
-{##}
-{#    });#}
-{#  $(document).foundation();#}
-{#  </script>#}
-{##}
-{#{% endblock %}#}
+
+{% block scripts %}
+
+    {#    Script to update the modal submit to delete the correct form#}
+    <script type="text/javascript">
+        $(".delete-press").click(function () {
+            $("#modal-confirm").attr("href", "/event/delete/" + $(this).data('event-id'));
+
+        });
+        $(document).foundation();
+    </script>
+
+{% endblock %}
