--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -24,33 +24,31 @@
             {% endblock %}
 
             {% block foundation_styles %}
-                {#      <link rel="stylesheet" href="//cdn1.bethel.edu/foundation/css/normalize.css">#}
-                {#      <link rel="stylesheet" href="//cdn2.bethel.edu/foundation/css/foundation.min.css">#}
+
                 <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/paper-dashboard.css">
                 <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/animate.min.css">
                 <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/bootstrap.min.css">
                 <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/themify-icons.css">
+{#                <link rel="stylesheet" href="//cdn1.bethel.edu/foundation/css/normalize.css">#}
+{#                <link rel="stylesheet" href="//cdn2.bethel.edu/foundation/css/foundation.min.css">#}
             {% endblock %}
 
             {% block styles %}
             {% endblock %}
-            <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-            <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+            <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
 
             <!--  Checkbox, Radio & Switch Plugins -->
-            <script src="assets/js/bootstrap-checkbox-radio.js"></script>
+            <script src="http://127.0.0.1:5000/static/assets/js/bootstrap-checkbox-radio.js"></script>
 
             <!--  Charts Plugin -->
-            <script src="assets/js/chartist.min.js"></script>
+            <script src="http://127.0.0.1:5000/static/assets/js/chartist.min.js"></script>
 
             <!--  Notifications Plugin    -->
-            <script src="assets/js/bootstrap-notify.js"></script>
-
-            <!--  Google Maps Plugin    -->
-            <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+            <script src="http://127.0.0.1:5000/static/assets/js/bootstrap-notify.js"></script>
 
             <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-            <script src="assets/js/paper-dashboard.js"></script>
+            <script src="http://127.0.0.1:5000/static/assets/js/paper-dashboard.js"></script>
 
             <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
             <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>{##}
@@ -77,8 +75,8 @@
             <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-placeholder/2.0.7/jquery.placeholder.min.js"></script>
 
 
-            <script src="//cdn1.bethel.edu/foundation/js/foundation.min.js"></script>
-            <script src="//cdn1.bethel.edu/foundation/js/foundation/foundation.alert.js"></script>
+{#            <script src="//cdn1.bethel.edu/foundation/js/foundation.min.js"></script>#}
+{#            <script src="//cdn1.bethel.edu/foundation/js/foundation/foundation.alert.js"></script>#}
 
         {% endblock %}
 
