--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -20,224 +20,152 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-{#    <div>#}
-{#        Welcome to Tinker!#}
-{#    </div>#}
-{##}
-{#    </hr>#}
+    {#    <div>#}
+    {#        Welcome to Tinker!#}
+    {#    </div>#}
+    {##}
+    {#    </hr>#}
 
     <div class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="card">
-                        <div class="content">
-                            <div class="row">
-                                <div class="col-xs-5">
-                                    <div class="icon-big icon-warning text-center">
-                                        <i class="ti-server"></i>
-                                    </div>
-                                </div>
-                                <div class="col-xs-7">
-                                    <div class="numbers">
-                                        <p>Capacity</p>
-                                        105GB
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="footer">
-                                <hr/>
-                                <div class="stats">
-                                    <i class="ti-reload"></i> Updated now
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="card">
-                        <div class="content">
-                            <div class="row">
-                                <div class="col-xs-5">
-                                    <div class="icon-big icon-success text-center">
-                                        <i class="ti-wallet"></i>
-                                    </div>
-                                </div>
-                                <div class="col-xs-7">
-                                    <div class="numbers">
-                                        <p>Revenue</p>
-                                        $1,345
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="footer">
-                                <hr/>
-                                <div class="stats">
-                                    <i class="ti-calendar"></i> Last day
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="card">
-                        <div class="content">
-                            <div class="row">
-                                <div class="col-xs-5">
-                                    <div class="icon-big icon-danger text-center">
-                                        <i class="ti-pulse"></i>
-                                    </div>
-                                </div>
-                                <div class="col-xs-7">
-                                    <div class="numbers">
-                                        <p>Errors</p>
-                                        23
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="footer">
-                                <hr/>
-                                <div class="stats">
-                                    <i class="ti-timer"></i> In the last hour
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="card">
-                        <div class="content">
-                            <div class="row">
-                                <div class="col-xs-5">
-                                    <div class="icon-big icon-info text-center">
-                                        <i class="ti-twitter-alt"></i>
-                                    </div>
-                                </div>
-                                <div class="col-xs-7">
-                                    <div class="numbers">
-                                        <p>Followers</p>
-                                        +45
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="footer">
-                                <hr/>
-                                <div class="stats">
-                                    <i class="ti-reload"></i> Updated now
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="header">
-                            <h4 class="title">Users Behavior</h4>
-                            <p class="category">24 Hours performance</p>
-                        </div>
-                        <div class="content">
-                            <div id="chartHours" class="ct-chart"></div>
-                            <div class="footer">
-                                <div class="chart-legend">
-                                    <i class="fa fa-circle text-info"></i> Open
-                                    <i class="fa fa-circle text-danger"></i> Click
-                                    <i class="fa fa-circle text-warning"></i> Click Second Time
-                                </div>
-                                <hr>
-                                <div class="stats">
-                                    <i class="ti-reload"></i> Updated 3 minutes ago
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="header">
-                            <h4 class="title">Email Statistics</h4>
-                            <p class="category">Last Campaign Performance</p>
+                            <h4 class="title">Manage Events</h4>
+                            {#                                <p class="category">Last Campaign Performance</p>#}
                         </div>
                         <div class="content">
-                            <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
-
-                            <div class="footer">
-                                <div class="chart-legend">
-                                    <i class="fa fa-circle text-info"></i> Open
-                                    <i class="fa fa-circle text-danger"></i> Bounce
-                                    <i class="fa fa-circle text-warning"></i> Unsubscribe
-                                </div>
-                                <hr>
-                                <div class="stats">
-                                    <i class="ti-timer"></i> Campaign sent 2 days ago
-                                </div>
+                            <div class="icon-big icon-warning text-center">
+                                <img src="get-image/events-icon.png"/>
                             </div>
+
+                            {#                                <div class="footer">#}
+                            {#                                    <div class="chart-legend">#}
+                            {#                                        <i class="fa fa-circle text-info"></i> Open#}
+                            {#                                        <i class="fa fa-circle text-danger"></i> Bounce#}
+                            {#                                        <i class="fa fa-circle text-warning"></i> Unsubscribe#}
+                            {#                                    </div>#}
+                            {#                                    <hr>#}
+                            {#                                    <div class="stats">#}
+                            {#                                        <i class="ti-timer"></i> Campaign sent 2 days ago#}
+                            {#                                    </div>#}
+                            {#                                </div>#}
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card ">
+                    <div class="card">
                         <div class="header">
-                            <h4 class="title">2015 Sales</h4>
-                            <p class="category">All products including Taxes</p>
+                            <h4 class="title">Faculty Bios</h4>
+                            {#                                <p class="category">Last Campaign Performance</p>#}
                         </div>
                         <div class="content">
-                            <div id="chartActivity" class="ct-chart"></div>
-
-                            <div class="footer">
-                                <div class="chart-legend">
-                                    <i class="fa fa-circle text-info"></i> Tesla Model S
-                                    <i class="fa fa-circle text-warning"></i> BMW 5 Series
-                                </div>
-                                <hr>
-                                <div class="stats">
-                                    <i class="ti-check"></i> Data information certified
-                                </div>
+                            <div class="icon-big icon-warning text-center">
+                                <img src="get-image/faculty-bio-icon.png"/>
                             </div>
+
+                            {#                                <div class="footer">#}
+                            {#                                    <div class="chart-legend">#}
+                            {#                                        <i class="fa fa-circle text-info"></i> Open#}
+                            {#                                        <i class="fa fa-circle text-danger"></i> Bounce#}
+                            {#                                        <i class="fa fa-circle text-warning"></i> Unsubscribe#}
+                            {#                                    </div>#}
+                            {#                                    <hr>#}
+                            {#                                    <div class="stats">#}
+                            {#                                        <i class="ti-timer"></i> Campaign sent 2 days ago#}
+                            {#                                    </div>#}
+                            {#                                </div>#}
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="header">
+                            <h4 class="title">Manage E-Announcements</h4>
+                            {#                                <p class="category">Last Campaign Performance</p>#}
+                        </div>
+                        <div class="content">
+                            <div class="icon-big icon-warning text-center">
+                                <img src="get-image/e-announcement.png">
+                            </div>
+
+                            {#                                <div class="footer">#}
+                            {#                                    <div class="chart-legend">#}
+                            {#                                        <i class="fa fa-circle text-info"></i> Open#}
+                            {#                                        <i class="fa fa-circle text-danger"></i> Bounce#}
+                            {#                                        <i class="fa fa-circle text-warning"></i> Unsubscribe#}
+                            {#                                    </div>#}
+                            {#                                    <hr>#}
+                            {#                                    <div class="stats">#}
+                            {#                                        <i class="ti-timer"></i> Campaign sent 2 days ago#}
+                            {#                                    </div>#}
+                            {#                                </div>#}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="header">
+                            <h4 class="title">Manage Redirects</h4>
+                            {#                                <p class="category">Last Campaign Performance</p>#}
+                        </div>
+                        <div class="content">
+                            <div class="icon-big icon-warning text-center">
+                                <img src="get-image/redirect-icon.png"/>
+                            </div>
+
+                            {#                                <div class="footer">#}
+                            {#                                    <div class="chart-legend">#}
+                            {#                                        <i class="fa fa-circle text-info"></i> Open#}
+                            {#                                        <i class="fa fa-circle text-danger"></i> Bounce#}
+                            {#                                        <i class="fa fa-circle text-warning"></i> Unsubscribe#}
+                            {#                                    </div>#}
+                            {#                                    <hr>#}
+                            {#                                    <div class="stats">#}
+                            {#                                        <i class="ti-timer"></i> Campaign sent 2 days ago#}
+                            {#                                    </div>#}
+                            {#                                </div>#}
+                        </div>
+                    </div>
+                </div>
+
+
+                {#    <div class="main-panel">#}
+                {#        <div class="large-6 columns">#}
+                {##}
+                {#            <a class="button expand" href="/event"><img src="get-image/events-icon.png" class="button-image" /><br />Manage events</a>#}
+                {#        </div>#}
+                {##}
+                {#        {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}#}
+                {#            <div class="large-6 columns">#}
+                {##}
+                {#              <a href="/faculty-bio" class="button expand"><img src="get-image/faculty-bio-icon.png" class="button-image" /><br />Faculty Bios</a>#}
+                {#            </div>#}
+                {#        {% endif %}#}
+                {#    </div>#}
+                {##}
+                {##}
+                {#    {% if 'Redirects' in session['groups'] or 'Administrators' in session['groups'] %}#}
+                {#      <div class="main-panel">#}
+                {#        <div class="large-6 columns">#}
+                {#          <a href="/admin/redirect" class="button expand"><img src="get-image/redirect-icon.png" class="button-image" /><br />Manage Redirects</a>#}
+                {#        </div>#}
+                {##}
+                {#        <div class="large-6 columns">#}
+                {#          <a href="/wufoo" class="button expand"><img src="get-image/wufoo-icon.png" class="button-image" /><br />Manage wufoo</a>#}
+                {#        </div>#}
+                {#      </div>#}
+                {#    {% endif %}#}
+                {##}
+                {#      <div class="main-panel">#}
+                {#        <div class="large-6 columns">#}
+                {#          <a href="/e-announcement" class="button expand"><img src="get-image/e-announcement.png" class="button-image" /><br />Manage E-Announcements</a>#}
+                {#        </div>#}
+                {#      </div>#}
             </div>
         </div>
     </div>
-
-
-    {#    <div class="main-panel">#}
-    {#        <div class="large-6 columns">#}
-    {##}
-    {#            <a class="button expand" href="/event"><img src="get-image/events-icon.png" class="button-image" /><br />Manage events</a>#}
-    {#        </div>#}
-    {##}
-    {#        {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}#}
-    {#            <div class="large-6 columns">#}
-    {##}
-    {#              <a href="/faculty-bio" class="button expand"><img src="get-image/faculty-bio-icon.png" class="button-image" /><br />Faculty Bios</a>#}
-    {#            </div>#}
-    {#        {% endif %}#}
-    {#    </div>#}
-    {##}
-    {##}
-    {#    {% if 'Redirects' in session['groups'] or 'Administrators' in session['groups'] %}#}
-    {#      <div class="main-panel">#}
-    {#        <div class="large-6 columns">#}
-    {#          <a href="/admin/redirect" class="button expand"><img src="get-image/redirect-icon.png" class="button-image" /><br />Manage Redirects</a>#}
-    {#        </div>#}
-    {##}
-    {#        <div class="large-6 columns">#}
-    {#          <a href="/wufoo" class="button expand"><img src="get-image/wufoo-icon.png" class="button-image" /><br />Manage wufoo</a>#}
-    {#        </div>#}
-    {#      </div>#}
-    {#    {% endif %}#}
-    {##}
-    {#      <div class="main-panel">#}
-    {#        <div class="large-6 columns">#}
-    {#          <a href="/e-announcement" class="button expand"><img src="get-image/e-announcement.png" class="button-image" /><br />Manage E-Announcements</a>#}
-    {#        </div>#}
-    {#      </div>#}
 
 {% endblock %}
 
