--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -56,7 +56,7 @@
     {#    </div>#}
     {#  </div>#}
 
-    <body>
+    <body xmlns="http://www.w3.org/1999/html">
 
     <div class="wrapper">
         <div class="sidebar" data-background-color="white" data-active-color="danger">
@@ -172,12 +172,12 @@
             {% block main_content %}
             {% endblock %}
 
-
+            <br/>
             <footer class="footer">
                 <div class="container-fluid">
                     <footer class="row">
                         <div class="large-12 columns">
-                            <hr/>
+                            <br/>
                             <div class="row">
                                 <div class="large-6 columns">
                                     <p>&copy; Bethel University -- <a href="/about">About</a></p>
